--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
                 </ul>
                 <div class="container second-section-container">
                     <ul class="list portfolio-list">
-                        <li><a class="link portfolio-2nd-list" href=""><img src="./images/img8.jpg"
+                        <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img8.jpg"
                                     alt="Purple bank app window" width="360" height="300">
                                 <div class="portfolio-link">
                                     <h2 class="value">Banking App Interface Concept</h2>
@@ -56,7 +56,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li><a class="link portfolio-2nd-list" href=""><img src="./images/img9.jpg"
+                        <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img9.jpg"
                                     alt="Scanning qr code by iphone" width="360" height="300">
                                 <div class="portfolio-link">
                                     <h2 class="value">Cashless Payment</h2>
@@ -64,7 +64,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li><a class="link portfolio-2nd-list" href=""><img src="./images/img10.jpg"
+                        <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img10.jpg"
                                     alt="Opened Macbook and iphone in hand" width="360" height="300">
                                 <div class="portfolio-link">
                                     <h2 class="value">Meditation App</h2>
@@ -72,7 +72,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li>
+                        <li class="portfolio-2nd-list">
                             <a class="link" href=""><img src="./images/img11.jpg"
                                     alt="Hands in gloves keeping steering wheel in car" width="360" height="300">
                                 <div class="portfolio-link">
@@ -81,15 +81,15 @@
                                 </div>
                             </a>
                         </li>
-                        <li><a class="link" href=""><img src="./images/img12.jpg" alt="Smartphone and it's 4 wallpapers"
-                                    width="360" height="300">
+                        <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img12.jpg"
+                                    alt="Smartphone and it's 4 wallpapers" width="360" height="300">
                                 <div class="portfolio-link">
                                     <h2 class="value">Screen Illustrations</h2>
                                     <p class="descript">Design</p>
                                 </div>
                             </a>
                         </li>
-                        <li><a class="link" href=""><img src="./images/img13.jpg"
+                        <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img13.jpg"
                                     alt="Smillng girl with sunglasses and orange sweater smiling to a phone" width="360"
                                     height="300">
                                 <div class="portfolio-link">
@@ -106,7 +106,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li><a class="link" href=""><img src="./images/img15.jpg"
+                        <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img15.jpg"
                                     alt="walking woman in grey outfit holding bag of vegetables" width="360"
                                     height="300">
                                 <div class="portfolio-link">
@@ -115,7 +115,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li><a class="link" href=""><img src="./images/img16.jpg"
+                        <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img16.jpg"
                                     alt="person holding a cup of coffe and pouring milk into it making pattern"
                                     width="360" height="300">
                                 <div class="portfolio-link">
