--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
         </div>
     </header>
     <main>
-        <section class="portfolio-1st-section">
+        <section class="portfolio-first-section">
             <div class="buttons-container container">
                 <h1 class="nd-headline visually-hidden">Our Projects</h1>
                 <ul class="list project-buttons ">
@@ -46,7 +46,6 @@
                     <li class="btn-list"><button class="btn" type="button">Design</button></li>
                     <li class="btn-list"><button class="btn" type="button">Marketing</button></li>
                 </ul>
-                <div class="container second-section-container">
                     <ul class="list portfolio-list">
                         <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img8.jpg"
                                     alt="Purple bank app window" width="360" height="300">
