--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,8 @@
         </div>
     </header>
     <main>
-        <section class="portfolio-first-section">
-            <div class="buttons-container container">
+        <section class="portfolio-section-one">
+            <div class="container buttons-container ">
                 <h1 class="nd-headline visually-hidden">Our Projects</h1>
                 <ul class="list project-buttons ">
                     <li class="btn-list"><button class="btn" type="button">All</button></li>
