--- a/portfolio.html
+++ b/portfolio.html
@@ -46,86 +46,85 @@
                     <li class="btn-list"><button class="btn" type="button">Design</button></li>
                     <li class="btn-list"><button class="btn" type="button">Marketing</button></li>
                 </ul>
-                    <ul class="list portfolio-list">
-                        <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img8.jpg"
-                                    alt="Purple bank app window" width="360" height="300">
-                                <div class="portfolio-link">
-                                    <h2 class="value">Banking App Interface Concept</h2>
-                                    <p class="descript">App</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img9.jpg"
-                                    alt="Scanning qr code by iphone" width="360" height="300">
-                                <div class="portfolio-link">
-                                    <h2 class="value">Cashless Payment</h2>
-                                    <p class="descript">Marketing</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img10.jpg"
-                                    alt="Opened Macbook and iphone in hand" width="360" height="300">
-                                <div class="portfolio-link">
-                                    <h2 class="value">Meditation App</h2>
-                                    <p class="descript">App</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-2nd-list">
-                            <a class="link" href=""><img src="./images/img11.jpg"
-                                    alt="Hands in gloves keeping steering wheel in car" width="360" height="300">
-                                <div class="portfolio-link">
-                                    <h2 class="value">Taxi Service</h2>
-                                    <p class="descript">Marketing</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img12.jpg"
-                                    alt="Smartphone and it's 4 wallpapers" width="360" height="300">
-                                <div class="portfolio-link">
-                                    <h2 class="value">Screen Illustrations</h2>
-                                    <p class="descript">Design</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img13.jpg"
-                                    alt="Smillng girl with sunglasses and orange sweater smiling to a phone" width="360"
-                                    height="300">
-                                <div class="portfolio-link">
-                                    <h2 class="value">Online Courses</h2>
-                                    <p class="descript">Marketing</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li><a class="link" href=""><img src="./images/img14.jpg"
-                                    alt="6 silver instagram posts with slogan" width="360" height="300">
-                                <div class="portfolio-link">
-                                    <h2 class="value">Instagram Stories Concept</h2>
-                                    <p class="descript">Design</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img15.jpg"
-                                    alt="walking woman in grey outfit holding bag of vegetables" width="360"
-                                    height="300">
-                                <div class="portfolio-link">
-                                    <h2 class="value">Organic Food</h2>
-                                    <p class="descript">Web Site</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="portfolio-2nd-list"><a class="link" href=""><img src="./images/img16.jpg"
-                                    alt="person holding a cup of coffe and pouring milk into it making pattern"
-                                    width="360" height="300">
-                                <div class="portfolio-link">
-                                    <h2 class="value">Fresh Coffee</h2>
-                                    <p class="descript">Web Site</p>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+                <ul class="list portfolio-list">
+                    <li class="portfolio-point-list"><a class="link" href=""><img src="./images/img8.jpg"
+                                alt="Purple bank app window" width="360" height="300">
+                            <div class="portfolio-link">
+                                <h2 class="value">Banking App Interface Concept</h2>
+                                <p class="descript">App</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-point-list"><a class="link" href=""><img src="./images/img9.jpg"
+                                alt="Scanning qr code by iphone" width="360" height="300">
+                            <div class="portfolio-link">
+                                <h2 class="value">Cashless Payment</h2>
+                                <p class="descript">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-point-list"><a class="link" href=""><img src="./images/img10.jpg"
+                                alt="Opened Macbook and iphone in hand" width="360" height="300">
+                            <div class="portfolio-link">
+                                <h2 class="value">Meditation App</h2>
+                                <p class="descript">App</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-point-list">
+                        <a class="link" href=""><img src="./images/img11.jpg"
+                                alt="Hands in gloves keeping steering wheel in car" width="360" height="300">
+                            <div class="portfolio-link">
+                                <h2 class="value">Taxi Service</h2>
+                                <p class="descript">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-point-list"><a class="link" href=""><img src="./images/img12.jpg"
+                                alt="Smartphone and it's 4 wallpapers" width="360" height="300">
+                            <div class="portfolio-link">
+                                <h2 class="value">Screen Illustrations</h2>
+                                <p class="descript">Design</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-point-list"><a class="link" href=""><img src="./images/img13.jpg"
+                                alt="Smillng girl with sunglasses and orange sweater smiling to a phone" width="360"
+                                height="300">
+                            <div class="portfolio-link">
+                                <h2 class="value">Online Courses</h2>
+                                <p class="descript">Marketing</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li><a class="link" href=""><img src="./images/img14.jpg" alt="6 silver instagram posts with slogan"
+                                width="360" height="300">
+                            <div class="portfolio-link">
+                                <h2 class="value">Instagram Stories Concept</h2>
+                                <p class="descript">Design</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-point-list"><a class="link" href=""><img src="./images/img15.jpg"
+                                alt="walking woman in grey outfit holding bag of vegetables" width="360" height="300">
+                            <div class="portfolio-link">
+                                <h2 class="value">Organic Food</h2>
+                                <p class="descript">Web Site</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="portfolio-point-list"><a class="link" href=""><img src="./images/img16.jpg"
+                                alt="person holding a cup of coffe and pouring milk into it making pattern" width="360"
+                                height="300">
+                            <div class="portfolio-link">
+                                <h2 class="value">Fresh Coffee</h2>
+                                <p class="descript">Web Site</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
             </div>
+
         </section>
     </main>
     <footer class="ftr">
