--- a/portfolio.html
+++ b/portfolio.html
@@ -97,8 +97,8 @@
                             </div>
                         </a>
                     </li>
-                    <li><a class="link" href=""><img src="./images/img14.jpg" alt="6 silver instagram posts with slogan"
-                                width="360" height="300">
+                    <li class="portfolio-point-list"><a class="link" href=""><img src="./images/img14.jpg"
+                                alt="6 silver instagram posts with slogan" width="360" height="300">
                             <div class="portfolio-link">
                                 <h2 class="value">Instagram Stories Concept</h2>
                                 <p class="descript">Design</p>
