--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
         </section>
         <section class="team-members">
-            <div class="container full-team">
+            <div class="container">
                 <h2 class="our-team">Our Team</h2>
                 <ul class="list members-list">
                     <li class="member"><img src="./images/img4.jpg" alt="A man with a beard and blue shirt" width="264"
