--- a/portfolio.html
+++ b/portfolio.html
@@ -40,11 +40,11 @@
             <div class="container buttons-container ">
                 <h1 class="nd-headline visually-hidden">Our Projects</h1>
                 <ul class="list project-buttons ">
-                    <li class="btn-list"><button class="btn" type="button">All</button></li>
-                    <li class="btn-list"><button class="btn" type="button">Web Site</button></li>
-                    <li class="btn-list"><button class="btn" type="button">App</button></li>
-                    <li class="btn-list"><button class="btn" type="button">Design</button></li>
-                    <li class="btn-list"><button class="btn" type="button">Marketing</button></li>
+                    <li><button class="btn" type="button">All</button></li>
+                    <li><button class="btn" type="button">Web Site</button></li>
+                    <li><button class="btn" type="button">App</button></li>
+                    <li><button class="btn" type="button">Design</button></li>
+                    <li><button class="btn" type="button">Marketing</button></li>
                 </ul>
                 <ul class="list portfolio-list">
                     <li class="portfolio-point-list"><a class="link" href=""><img src="./images/img8.jpg"
